wacc/test/golden/syntaxErr.sequence.extraSeq
# extra sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip; end


In test/wacc_examples/invalid/syntaxErr/sequence/extraSeq.wacc (line 11, column 13):
unexpected keyword end
expected begin, exit, free, fst, identifier, if, print, println, read, return, skip, snd, type, or while
> 
> begin skip; end
>             ^^^
